--- a/index.html
+++ b/index.html
@@ -66,42 +66,40 @@
                             <li><span>PHP</span></li>
                             <li><span>HTML5</span></li>
                             <li><span>CSS3</span></li>
-                            <li><span>Bootstrap</span></li>
-                            <li><span>React</span></li>
+                            <li><span>Linux</span></li>
+                            <li><span>VScode</span></li>
                         </ul>
                     </section>
                     <section class="references">
                         <h6>References</h6>
                         <address>
-                            Jane Doe<br />
-                            Alphabet Inc.<br />
-                            (413) 025-1900
-                            jane@janedoe.site
+                            Caleb Mcmurray<br />
+                            US Marine Core<br />
+                            (478) 978-1179
                         </address>
                         <address>
-                            Luke O'Connor<br />
-                            Facebook<br />
-                            (413) 125-1400
-                            luke@facebook.site
+                            Aubrey Smith<br />
+                            USDA FSA<br />
+                            (615) 782-9859
                         </address>
                         <p>Typeset in HTML &amp; CSS<br />
                         See <a href="https://git.io/f4dXp">git.io/f4dXp</a></p>
                     </section>
                 </aside>
                 <section>
-                    <header class="name" aria-label="Joe Smith">
-                        <a href="https://joesmith.site">
+                    <header class="name" aria-label="William Smith">
+                        <a href="https://mrwps.github.io">
                             <svg width="257px" height="35px" viewBox="0 0 257 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Montserrat-Regular, Montserrat" font-size="48" font-weight="normal">
                                     <g id="Letter" transform="translate(-54.000000, -140.000000)" fill="#484848">
-                                        <text id="JOE-SMITH">
-                                            <tspan x="54.728" y="174">JOE SMITH</tspan>
+                                        <text id="William-SMITH">
+                                            <tspan x="54.728" y="174">William SMITH</tspan>
                                         </text>
                                     </g>
                                 </g>
                             </svg>
                         </a>
-                        <h6>Software Engineer Extraordinaire</h6>
+                        <h6>Software Engineer</h6>
                         <hr />
                     </header>
                     <section>
