--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-family="Montserrat-Regular, Montserrat" font-size="28" font-weight="normal">
                                     <g id="Letter" transform="translate(-54.000000, -140.000000)" fill="#484848">
                                         <text id="William-SMITH">
-                                            <tspan x="54.728" y="174">William SMITH</tspan>
+                                            <tspan x="54.728" y="174">William Smith</tspan>
                                         </text>
                                     </g>
                                 </g>
@@ -104,12 +104,11 @@
                     <section>
                         <section class="summary">
                             <h6>Summary</h6>
-                            <p>Deadline-oriented software engineer with lots of experience.
-                                Solid track record of architecting solutions that exceed client expectations.</p>
+                            <p>Deadline-oriented software engineer.</p>
                         </section>
                         <section class="experience">
                             <h6>Experience</h6>
-                            <ol>
+                            <!--<ol>
                                 <li>
                                     <header>
                                         <p class="sanserif">Senior Software Engineer</p>
@@ -157,28 +156,18 @@
                                     </ul>
                                 </li>
                             </ol>
-                        </section>
+                        </section>-->
                         <section class="education">
                             <h6>Education</h6>
                             <ol>
                                 <li>
                                     <div>
-                                        <p class="sanserif">M.S., Human Computer Interaction</p>
-                                        <time>Sept '12 – May '14</time>
+                                        <p class="sanserif">B.S Computer Science</p>
+                                        <time>Jan '2020 – May '2025</time>
                                     </div>
                                     <div>
-                                        <span>Massachusetts Institute of Technology</span>
+                                        <span>Georgia College</span>
                                         <span></span>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div>
-                                        <p class="sanserif">B.S., Computer Science</p>
-                                        <time>Sept '08 – May '12</time>
-                                    </div>
-                                    <div>
-                                        <span>Harvard University</span>
-                                        <span>GPA: 3.91</span>
                                     </div>
                                 </li>
                             </ol>
@@ -190,5 +179,4 @@
         <!-- Script to make elements authorable and save changes to localStorage -->
         <script type="text/javascript" src="./index.js"></script>
     </body>
-    <!-- Developed by Tom Barrasso. https://barrasso.me -->
 </html>
